--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,16 @@
 
-/* 
+body{
+    display: flex;
+    justify-content: center;
+    background-color: rgb(4, 4, 3);
+   
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+.todoList{
+    background-color: aliceblue;
+    box-shadow: 0 0 30px 0;
+}
+h1{
+    display: flex;
+    justify-content: center;
+}
